--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,8 +11,8 @@
       <a href="#">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="#">Agencja</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="index.html">Studio</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
