--- a/portfolio.html
+++ b/portfolio.html
@@ -38,41 +38,55 @@
           <li>
             <figure>
               <img
-                src="images/ChristopherWalker.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Christopher Walker"
+                src="images/technoduck.jpg"
+                width="370"
+                height="294"
+                alt="Photo of the laptop screen"
               />
               <figcaption>
-                <h3>Christopher Walker</h3>
-                <p>Product Designer</p>
+                <h3>Technoduck</h3>
+                <p>Web-site</p>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/KylieEvans.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Kylie Evans"
+                src="images/basketball.jpg"
+                width="370"
+                height="294"
+                alt="Photo of two basketball players"
               />
               <figcaption>
-                <h3>Kylie Evans</h3>
-                <p>Frontend Developer</p>
+                <h3>Poster New Orlean vs Golden Star</h3>
+                <p>Design</p>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/RyanHarris.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Ryan Harris"
+                src="images/seafood.jpg"
+                width="370"
+                height="294"
+                alt="Restaurant signboard"
               />
               <figcaption>
-                <h3>Ryan Harris</h3>
+                <h3>Seafood Resttaurant</h3>
+                <p>Apps</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/headphones.jpg"
+                width="370"
+                height="294"
+                alt="Photo of black headphones"
+              />
+              <figcaption>
+                <h3>Project Prime</h3>
                 <p>Marketing</p>
               </figcaption>
             </figure>
@@ -80,55 +94,55 @@
           <li>
             <figure>
               <img
-                src="images/TylerMoore.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Tyler Moore"
+                src="images/boxes.jpg"
+                width="370"
+                height="294"
+                alt="Photo of boxes"
               />
               <figcaption>
-                <h3>Tyler Moore</h3>
-                <p>UI Designer</p>
+                <h3>Project Boxes</h3>
+                <p>Apps</p>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/ChristopherWalker.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Christopher Walker"
+                src="images/monitor.jpg"
+                width="370"
+                height="294"
+                alt="Photo of monitor"
               />
               <figcaption>
-                <h3>Christopher Walker</h3>
-                <p>Product Designer</p>
+                <h3>Inspiration has no Borders</h3>
+                <p>Web-site</p>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/KylieEvans.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Kylie Evans"
+                src="images/magazine.jpg"
+                width="370"
+                height="294"
+                alt="Photo of the magazine"
               />
               <figcaption>
-                <h3>Kylie Evans</h3>
-                <p>Frontend Developer</p>
+                <h3>Limited Edition</h3>
+                <p>Design</p>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/RyanHarris.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Ryan Harris"
+                src="images/label.jpg"
+                width="370"
+                height="294"
+                alt="Photo of the label"
               />
               <figcaption>
-                <h3>Ryan Harris</h3>
+                <h3>Project LAB</h3>
                 <p>Marketing</p>
               </figcaption>
             </figure>
@@ -136,70 +150,14 @@
           <li>
             <figure>
               <img
-                src="images/TylerMoore.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Tyler Moore"
+                src="images/laptop.jpg"
+                width="370"
+                height="294"
+                alt="Photo of the laptop"
               />
               <figcaption>
-                <h3>Tyler Moore</h3>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/ChristopherWalker.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Christopher Walker"
-              />
-              <figcaption>
-                <h3>Christopher Walker</h3>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/KylieEvans.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Kylie Evans"
-              />
-              <figcaption>
-                <h3>Kylie Evans</h3>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/RyanHarris.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Ryan Harris"
-              />
-              <figcaption>
-                <h3>Ryan Harris</h3>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="images/TylerMoore.jpg"
-                width="270"
-                height="260"
-                alt="Zdjęcie Tyler Moore"
-              />
-              <figcaption>
-                <h3>Tyler Moore</h3>
-                <p>UI Designer</p>
+                <h3>Growing Business</h3>
+                <p>Apps</p>
               </figcaption>
             </figure>
           </li>
