dodanie css do index

--- a/index.html
+++ b/index.html
@@ -15,59 +15,76 @@
   </head>
   <body>
     <header>
-      <a href="#">WebStudio</a>
+      <a class="logo-header" href="#">WebStudio</a>
+
       <nav>
-        <ul>
-          <li><a href="index.html">Studio</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <ul class="nav-links">
+          <li>
+            <a class="nav-links" href="index.html">Studio</a>
+          </li>
+          <li>
+            <a class="nav-links" href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-links" href="#">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+      <ul class="contact-links-header">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-links-header"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+1212-772-4150" class="contact-links-header"
+            >+1 212-772-4150</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>
+      <section class="section-first">
+        <h1 class="section-first-title">
           EFFECTIVE SOLUTIONS FOR <br />
           YOUR BUSINESS
         </h1>
-        <button type="button">Request our service</button>
+        <button class="button-service" type="button">
+          Request our service
+        </button>
       </section>
       <section>
         <ul>
           <li>
-            <h4>ATTENTION TO DETAILS</h4>
-            <p>
+            <h4 class="title-section-two">ATTENTION TO DETAILS</h4>
+            <p class="text-section-two">
               We go into all the details and processes of your business to
               develop a customized solution.
             </p>
           </li>
 
           <li>
-            <h4>PUNCTUALITY</h4>
+            <h4 class="title-section-two">PUNCTUALITY</h4>
 
-            <p>
+            <p class="text-section-two">
               With us, you can feel safe and secure. An important principle of
               the company: respect your time and respect the agreed deadlines.
             </p>
           </li>
 
           <li>
-            <h4>PLANNING</h4>
+            <h4 class="title-section-two">PLANNING</h4>
 
-            <p>
+            <p class="text-section-two">
               You will be able to observe and participate in every phase of
               solution development and implementation.
             </p>
           </li>
 
           <li>
-            <h4>MODERN TECHNOLOGIES</h4>
+            <h4 class="title-section-two">MODERN TECHNOLOGIES</h4>
 
-            <p>
+            <p class="text-section-two">
               We use innovative tools to solve assigned tasks. It's time to
               simplify work processes.
             </p>
@@ -75,7 +92,7 @@
         </ul>
       </section>
       <section>
-        <h2>What we do</h2>
+        <h2 class="title-section-tree">What we do</h2>
         <ul>
           <li>
             <img
@@ -104,7 +121,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="title-section-tree">Our Team</h2>
         <ul>
           <li>
             <figure>
@@ -115,8 +132,8 @@
                 alt="Zdjęcie Christopher Walker"
               />
               <figcaption>
-                <h3>Christopher Walker</h3>
-                <p>Product Designer</p>
+                <h3 class="image-name">Christopher Walker</h3>
+                <p class="image-text">Product Designer</p>
               </figcaption>
             </figure>
           </li>
@@ -129,8 +146,8 @@
                 alt="Zdjęcie Kylie Evans"
               />
               <figcaption>
-                <h3>Kylie Evans</h3>
-                <p>Frontend Developer</p>
+                <h3 class="image-name">Kylie Evans</h3>
+                <p class="image-text">Frontend Developer</p>
               </figcaption>
             </figure>
           </li>
@@ -143,8 +160,8 @@
                 alt="Zdjęcie Ryan Harris"
               />
               <figcaption>
-                <h3>Ryan Harris</h3>
-                <p>Marketing</p>
+                <h3 class="image-name">Ryan Harris</h3>
+                <p class="image-text">Marketing</p>
               </figcaption>
             </figure>
           </li>
@@ -157,22 +174,34 @@
                 alt="Zdjęcie Tyler Moore"
               />
               <figcaption>
-                <h3>Tyler Moore</h3>
-                <p>UI Designer</p>
+                <h3 class="image-name">Tyler Moore</h3>
+                <p class="image-text">UI Designer</p>
               </figcaption>
             </figure>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#">WebStudio</a>
+    <footer class="logo-background-footer">
+      <a class="logo-footer" href="#">WebStudio</a>
       <address>
         <ul>
-          <li>695 Park Ave, New York, NY 10065, United States</li>
+          <li>
+            <span class="address-footer"
+              >695 Park Ave, New York, NY 10065, United States</span
+            >
+          </li>
 
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+          <li>
+            <a class="contact-links-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-links-footer" href="tel:+1212-772-4150"
+              >+1 212-772-4150</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
