--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a href="#">WebStudio</a>
+      <a href="#"><span class="webstudio-discriptions">WebStudio</span></a>
       <nav>
         <ul>
           <li><a href="index.html">Studio</a></li>
@@ -171,7 +171,7 @@
       </section>
     </main>
     <footer>
-      <a href="#">WebStudio</a>
+      <a href="#"><span class="webstudio-discriptions">WebStudio</span></a>
       <address>
         <ul>
           <li>695 Park Ave, New York, NY 10065, United States</li>
