dodanie css do portfolio

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="secttion-four">
         <h2 class="title-section-tree">Our Team</h2>
         <ul>
           <li>
-            <figure>
+            <figure class="image-background">
               <img
                 src="images/ChristopherWalker.jpg"
                 width="270"
@@ -132,13 +132,13 @@
                 alt="Zdjęcie Christopher Walker"
               />
               <figcaption>
-                <h3 class="image-name">Christopher Walker</h3>
-                <p class="image-text">Product Designer</p>
+                <h3 class="image-name-studio">Christopher Walker</h3>
+                <p class="image-text-studio">Product Designer</p>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="image-background">
               <img
                 src="images/KylieEvans.jpg"
                 width="270"
@@ -146,13 +146,13 @@
                 alt="Zdjęcie Kylie Evans"
               />
               <figcaption>
-                <h3 class="image-name">Kylie Evans</h3>
-                <p class="image-text">Frontend Developer</p>
+                <h3 class="image-name-studio">Kylie Evans</h3>
+                <p class="image-text-studio">Frontend Developer</p>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="image-background">
               <img
                 src="images/RyanHarris.jpg"
                 width="270"
@@ -160,13 +160,13 @@
                 alt="Zdjęcie Ryan Harris"
               />
               <figcaption>
-                <h3 class="image-name">Ryan Harris</h3>
-                <p class="image-text">Marketing</p>
+                <h3 class="image-name-studio">Ryan Harris</h3>
+                <p class="image-text-studio">Marketing</p>
               </figcaption>
             </figure>
           </li>
           <li>
-            <figure>
+            <figure class="image-background">
               <img
                 src="images/TylerMoore.jpg"
                 width="270"
@@ -174,8 +174,8 @@
                 alt="Zdjęcie Tyler Moore"
               />
               <figcaption>
-                <h3 class="image-name">Tyler Moore</h3>
-                <p class="image-text">UI Designer</p>
+                <h3 class="image-name-studio">Tyler Moore</h3>
+                <p class="image-text-studio">UI Designer</p>
               </figcaption>
             </figure>
           </li>
