--- a/portfolio.html
+++ b/portfolio.html
@@ -15,27 +15,48 @@
   </head>
   <body>
     <header>
-      <a href="#"><span class="webstudio-discriptions">WebStudio</span></a>
+      <a class="logo-header" href="#">WebStudio</a>
+
       <nav>
-        <ul>
-          <li><a href="index.html">Studio</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <ul class="nav-links">
+          <li>
+            <a class="nav-links" href="index.html">Studio</a>
+          </li>
+          <li>
+            <a class="nav-links" href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-links" href="#">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+      <ul class="contact-links-header">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-links-header"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+1212-772-4150" class="contact-links-header"
+            >+1 212-772-4150</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <section>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web-sites</button></li>
-          <li><button type="button">Apps</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="button-portfolio">
+          <li><button class="button-all" type="button">All</button></li>
+          <li>
+            <button class="button-web-site" type="button">Web-sites</button>
+          </li>
+          <li><button class="button-apps" type="button">Apps</button></li>
+          <li>
+            <button class="button-design" type="button">Design</button>
+          </li>
+          <li>
+            <button class="button-marketing" type="button">Marketing</button>
+          </li>
         </ul>
       </section>
 
@@ -50,8 +71,8 @@
                 alt="Photo of the laptop screen"
               />
               <figcaption>
-                <h3>Technoduck</h3>
-                <p>Web-site</p>
+                <h3 class="image-name-portfolio">Technoduck</h3>
+                <p class="image-text-portfolio">Web-site</p>
               </figcaption>
             </figure>
           </li>
@@ -64,8 +85,10 @@
                 alt="Photo of two basketball players"
               />
               <figcaption>
-                <h3>Poster New Orlean vs Golden Star</h3>
-                <p>Design</p>
+                <h3 class="image-name-portfolio">
+                  Poster New Orlean vs Golden Star
+                </h3>
+                <p class="image-text-portfolio">Design</p>
               </figcaption>
             </figure>
           </li>
@@ -78,8 +101,8 @@
                 alt="Restaurant signboard"
               />
               <figcaption>
-                <h3>Seafood Resttaurant</h3>
-                <p>Apps</p>
+                <h3 class="image-name-portfolio">Seafood Resttaurant</h3>
+                <p class="image-text-portfolio">Apps</p>
               </figcaption>
             </figure>
           </li>
@@ -92,8 +115,8 @@
                 alt="Photo of black headphones"
               />
               <figcaption>
-                <h3>Project Prime</h3>
-                <p>Marketing</p>
+                <h3 class="image-name-portfolio">Project Prime</h3>
+                <p class="image-text-portfolio">Marketing</p>
               </figcaption>
             </figure>
           </li>
@@ -106,8 +129,8 @@
                 alt="Photo of boxes"
               />
               <figcaption>
-                <h3>Project Boxes</h3>
-                <p>Apps</p>
+                <h3 class="image-name-portfolio">Project Boxes</h3>
+                <p class="image-text-portfolio">Apps</p>
               </figcaption>
             </figure>
           </li>
@@ -120,8 +143,8 @@
                 alt="Photo of monitor"
               />
               <figcaption>
-                <h3>Inspiration has no Borders</h3>
-                <p>Web-site</p>
+                <h3 class="image-name-portfolio">Inspiration has no Borders</h3>
+                <p class="image-text-portfolio">Web-site</p>
               </figcaption>
             </figure>
           </li>
@@ -134,8 +157,8 @@
                 alt="Photo of the magazine"
               />
               <figcaption>
-                <h3>Limited Edition</h3>
-                <p>Design</p>
+                <h3 class="image-name-portfolio">Limited Edition</h3>
+                <p class="image-text-portfolio">Design</p>
               </figcaption>
             </figure>
           </li>
@@ -148,8 +171,8 @@
                 alt="Photo of the label"
               />
               <figcaption>
-                <h3>Project LAB</h3>
-                <p>Marketing</p>
+                <h3 class="image-name-portfolio">Project LAB</h3>
+                <p class="image-text-portfolio">Marketing</p>
               </figcaption>
             </figure>
           </li>
@@ -162,22 +185,34 @@
                 alt="Photo of the laptop"
               />
               <figcaption>
-                <h3>Growing Business</h3>
-                <p>Apps</p>
+                <h3 class="image-name-portfolio">Growing Business</h3>
+                <p class="image-text-portfolio">Apps</p>
               </figcaption>
             </figure>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#"><span class="webstudio-discriptions">WebStudio</span></a>
+    <footer class="logo-background-footer">
+      <a class="logo-footer" href="#">WebStudio</a>
       <address>
         <ul>
-          <li>695 Park Ave, New York, NY 10065, United States</li>
+          <li>
+            <span class="address-footer"
+              >695 Park Ave, New York, NY 10065, United States</span
+            >
+          </li>
 
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+1212-772-4150">+1 212-772-4150</a></li>
+          <li>
+            <a class="contact-links-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-links-footer" href="tel:+1212-772-4150"
+              >+1 212-772-4150</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
