--- a/portfolio.html
+++ b/portfolio.html
@@ -30,32 +30,30 @@
           </li>
         </ul>
       </nav>
-      <ul class="contact-links-header">
+      <ul class="contact-links">
         <li>
-          <a href="mailto:info@devstudio.com" class="contact-links-header"
+          <a href="mailto:info@devstudio.com" class="contact-links"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+1212-772-4150" class="contact-links-header"
-            >+1 212-772-4150</a
-          >
+          <a href="tel:+1212-772-4150" class="contact-links">+1 212-772-4150</a>
         </li>
       </ul>
     </header>
     <main>
       <section>
         <ul class="button-portfolio">
-          <li><button class="button-all" type="button">All</button></li>
+          <li><button class="button all" type="button">All</button></li>
           <li>
-            <button class="button-web-site" type="button">Web-sites</button>
+            <button class="button web-site" type="button">Web-sites</button>
           </li>
-          <li><button class="button-apps" type="button">Apps</button></li>
+          <li><button class="button apps" type="button">Apps</button></li>
           <li>
-            <button class="button-design" type="button">Design</button>
+            <button class="button design" type="button">Design</button>
           </li>
           <li>
-            <button class="button-marketing" type="button">Marketing</button>
+            <button class="button marketing" type="button">Marketing</button>
           </li>
         </ul>
       </section>
@@ -196,20 +194,17 @@
     <footer class="logo-background-footer">
       <a class="logo-footer" href="#">WebStudio</a>
       <address>
-        <ul>
+        <p class="address-footer">
+          695 Park Ave, New York, NY 10065, United States
+        </p>
+        <ul class="contact-links">
           <li>
-            <span class="address-footer"
-              >695 Park Ave, New York, NY 10065, United States</span
-            >
-          </li>
-
-          <li>
-            <a class="contact-links-footer" href="mailto:info@devstudio.com"
+            <a href="mailto:info@devstudio.com" class="contact-links"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-links-footer" href="tel:+1212-772-4150"
+            <a href="tel:+1212-772-4150" class="contact-links"
               >+1 212-772-4150</a
             >
           </li>
