--- a/index.html
+++ b/index.html
@@ -20,26 +20,22 @@
       <nav>
         <ul class="nav-links">
           <li>
-            <a class="nav-links" href="index.html">Studio</a>
+            <a href="index.html">Studio</a>
           </li>
           <li>
-            <a class="nav-links" href="portfolio.html">Portfolio</a>
+            <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="nav-links" href="#">Contacts</a>
+            <a href="#">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul class="contact-links-header">
+      <ul class="contact-links">
         <li>
-          <a href="mailto:info@devstudio.com" class="contact-links-header"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+1212-772-4150" class="contact-links-header"
-            >+1 212-772-4150</a
-          >
+          <a href="tel:+1212-772-4150">+1 212-772-4150</a>
         </li>
       </ul>
     </header>
@@ -185,22 +181,15 @@
     <footer class="logo-background-footer">
       <a class="logo-footer" href="#">WebStudio</a>
       <address>
-        <ul>
+        <p class="address-footer">
+          695 Park Ave, New York, NY 10065, United States
+        </p>
+        <ul class="contact-links">
           <li>
-            <span class="address-footer"
-              >695 Park Ave, New York, NY 10065, United States</span
-            >
-          </li>
-
-          <li>
-            <a class="contact-links-footer" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="contact-links-footer" href="tel:+1212-772-4150"
-              >+1 212-772-4150</a
-            >
+            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
           </li>
         </ul>
       </address>
