--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a class="logo-header" href="#">WebStudio</a>
+      <a class="logo" href="#">WebStudio</a>
 
       <nav>
         <ul class="nav-links">
@@ -41,10 +41,7 @@
     </header>
     <main>
       <section class="section-first">
-        <h1 class="section-first-title">
-          EFFECTIVE SOLUTIONS FOR <br />
-          YOUR BUSINESS
-        </h1>
+        <p class="section-first-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</p>
         <button class="button-service" type="button">
           Request our service
         </button>
@@ -179,7 +176,7 @@
       </section>
     </main>
     <footer class="logo-background-footer">
-      <a class="logo-footer" href="#">WebStudio</a>
+      <a class="logo" href="#">WebStudio</a>
       <address>
         <p class="address-footer">
           695 Park Ave, New York, NY 10065, United States
