--- a/portfolio.html
+++ b/portfolio.html
@@ -15,29 +15,27 @@
   </head>
   <body>
     <header>
-      <a class="logo-header" href="#">WebStudio</a>
+      <a class="logo" href="#">WebStudio</a>
 
       <nav>
         <ul class="nav-links">
           <li>
-            <a class="nav-links" href="index.html">Studio</a>
+            <a href="index.html">Studio</a>
           </li>
           <li>
-            <a class="nav-links" href="portfolio.html">Portfolio</a>
+            <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a class="nav-links" href="#">Contacts</a>
+            <a href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <ul class="contact-links">
         <li>
-          <a href="mailto:info@devstudio.com" class="contact-links"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+1212-772-4150" class="contact-links">+1 212-772-4150</a>
+          <a href="tel:+1212-772-4150">+1 212-772-4150</a>
         </li>
       </ul>
     </header>
@@ -192,21 +190,17 @@
       </section>
     </main>
     <footer class="logo-background-footer">
-      <a class="logo-footer" href="#">WebStudio</a>
+      <a class="logo" href="#">WebStudio</a>
       <address>
         <p class="address-footer">
           695 Park Ave, New York, NY 10065, United States
         </p>
         <ul class="contact-links">
           <li>
-            <a href="mailto:info@devstudio.com" class="contact-links"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+1212-772-4150" class="contact-links"
-              >+1 212-772-4150</a
-            >
+            <a href="tel:+1212-772-4150">+1 212-772-4150</a>
           </li>
         </ul>
       </address>
