zmiana kolorów i dziedziczenie

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="#">WebStudio</a>
+      <a class="logo" href="#">Web<span class="logo-header">Studio</span></a>
 
       <nav>
         <ul class="nav-links">
@@ -41,7 +41,9 @@
     </header>
     <main>
       <section class="section-first">
-        <p class="section-first-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</p>
+        <h1 class="section-first-title">
+          EFFECTIVE SOLUTIONS FOR YOUR BUSINESS
+        </h1>
         <button class="button-service" type="button">
           Request our service
         </button>
@@ -176,7 +178,7 @@
       </section>
     </main>
     <footer class="logo-background-footer">
-      <a class="logo" href="#">WebStudio</a>
+      <a class="logo" href="#">Web<span class="logo-footer">Studio</span></a>
       <address>
         <p class="address-footer">
           695 Park Ave, New York, NY 10065, United States
