--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="#">WebStudio</a>
+      <a class="logo" href="#">Web<span class="logo-header">Studio</span></a>
 
       <nav>
         <ul class="nav-links">
@@ -190,7 +190,7 @@
       </section>
     </main>
     <footer class="logo-background-footer">
-      <a class="logo" href="#">WebStudio</a>
+      <a class="logo" href="#">Web<span class="logo-footer">Studio</span></a>
       <address>
         <p class="address-footer">
           695 Park Ave, New York, NY 10065, United States
